--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
       <h3 class="step-title">This is step 1</h3>
       <div class="form-group">
         <label for="email">Email</label>
-        <input type="email" name="email" id="email">
+        <input type="email" name="email" id="email" placeholder="Email">
       </div>
       <div class="form-group">
         <label for="password">Password</label>
-        <input type="password" name="password" id="password">
+        <input type="password" name="password" id="password" placeholder="Password">
       </div>
       <button type="button" data-next>Next</button>
     </div>
@@ -26,15 +26,15 @@
       <h3 class="step-title">This is step 2</h3>
       <div class="form-group">
         <label for="address">Address</label>
-        <input type="text" name="address" id="address">
+        <input type="text" name="address" id="address" placeholder="Address">
       </div>
       <div class="form-group">
         <label for="city">City</label>
-        <input type="text" name="city" id="city">
+        <input type="text" name="city" id="city" placeholder="City">
       </div>
       <div class="form-group">
         <label for="zipcode">Zip Code</label>
-        <input type="text" name="zipcode" id="zipcode">
+        <input type="text" name="zipcode" id="zipcode" placeholder="Zip code">
       </div>
       <button type="button" data-previous>Previous</button>
       <button type="button" data-next>Next</button>
@@ -43,11 +43,11 @@
       <h3 class="step-title">This is step 3</h3>
       <div class="form-group">
         <label for="firstName">First Name</label>
-        <input type="text" name="firstName" id="firstName">
+        <input type="text" name="firstName" id="firstName" placeholder="First Name">
       </div>
       <div class="form-group">
         <label for="lastName">Last Name</label>
-        <input type="text" name="lastName" id="lastName">
+        <input type="text" name="lastName" id="lastName" placeholder="Last Name">
       </div>
       <button type="button" data-previous>Previous</button>
       <button type="submit">Submit</button>
